--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,12 +1,16 @@
 {
-    "rewrites": [
-      {
-        "source": "/api/:path*",
-        "destination": "https://prismtech-1.onrender.com/api/:path*"
-      },
-      {
-        "source": "/uploads/:path*",
-        "destination": "https://prismtech-1.onrender.com/uploads/:path*"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "vite.config.js", "use": "@vercel/static-build" }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "https://prismtech-1.onrender.com/api/$1"
+    },
+    {
+      "src": "/uploads/(.*)",
+      "dest": "https://prismtech-1.onrender.com/uploads/$1"
+    }
+  ]
+}
